<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#4A4949"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/acaotxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/action"
        android:textAlignment="center" />

    <androidx.cardview.widget.CardView
        android:id="@+id/acaoCard"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/acaotxt"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="#7159C1"
        app:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/acaoResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/lpatxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/acaoCard"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/lpa"
        android:textAlignment="center" />

    <androidx.cardview.widget.CardView
        android:id="@+id/lpaCard"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/lpatxt"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="#7159C1"
        app:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/lpaResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <TextView
    android:id="@+id/pltxt"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/lpaCard"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="20dp"
    android:text="@string/pl"
    android:textAlignment="center" />

    <androidx.cardview.widget.CardView
        android:id="@+id/plCard"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/pltxt"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="#7159C1"
        app:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/plResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/roetxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/plCard"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/roe"
        android:textAlignment="center" />

    <androidx.cardview.widget.CardView
        android:id="@+id/roeCard"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/roetxt"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="#7159C1"
        app:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/roeResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/vpatxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/roeCard"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/vpa"
        android:textAlignment="center" />

    <androidx.cardview.widget.CardView
        android:id="@+id/vpaCard"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/vpatxt"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="#7159C1"
        app:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/vpaResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/pvtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vpaCard"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/pv"
        android:textAlignment="center" />

    <androidx.cardview.widget.CardView
        android:id="@+id/pvCard"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/pvtxt"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="#7159C1"
        app:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/pvResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>
</RelativeLayout>